@@ -75,20 +75,29 @@ class Smarty_Internal_Compile_Call extends Smarty_Internal_CompileBase {
                 } 
             } 
         }
+        //varibale name?
+        if (!(strpos($_name,'$')===false)) {
+        	$call_cache = $_name;
+        	$call_function = "\$tmp = \"smarty_template_function_{{$_name}}\"; \$tmp";
+       	} else {
+       		$call_cache = "'{$_name}'";
+         	$call_function = 'smarty_template_function_'.$_name;
+        }
+      	
         $_params = 'array(' . implode(",", $_paramsArray) . ')';
     	$_hash = str_replace('-','_',$compiler->template->properties['nocache_hash']);
         // was there an assign attribute
         if (isset($_assign)) {
             if ($compiler->template->caching) {
-                $_output = "<?php ob_start(); Smarty_Internal_Function_Call_Handler::call ('{$_name}',\$_smarty_tpl,{$_params},'{$_hash}',{$_nocache}); \$_smarty_tpl->assign({$_assign}, ob_get_clean());?>\n";
+                $_output = "<?php ob_start(); Smarty_Internal_Function_Call_Handler::call ({$call_cache},\$_smarty_tpl,{$_params},'{$_hash}',{$_nocache}); \$_smarty_tpl->assign({$_assign}, ob_get_clean());?>\n";
             } else {
-                $_output = "<?php ob_start(); smarty_template_function_{$_name}(\$_smarty_tpl,{$_params}); \$_smarty_tpl->assign({$_assign}, ob_get_clean());?>\n";
+                $_output = "<?php ob_start(); {$call_function}(\$_smarty_tpl,{$_params}); \$_smarty_tpl->assign({$_assign}, ob_get_clean());?>\n";
             } 
         } else {
             if ($compiler->template->caching) {
-                $_output = "<?php Smarty_Internal_Function_Call_Handler::call ('{$_name}',\$_smarty_tpl,{$_params},'{$_hash}',{$_nocache});?>\n";
+                $_output = "<?php Smarty_Internal_Function_Call_Handler::call ({$call_cache},\$_smarty_tpl,{$_params},'{$_hash}',{$_nocache});?>\n";
             } else {
-                $_output = "<?php smarty_template_function_{$_name}(\$_smarty_tpl,{$_params});?>\n";
+                $_output = "<?php {$call_function}(\$_smarty_tpl,{$_params});?>\n";
             } 
         } 
         return $_output;
